--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "1.0.3",
   "private": true,
   "scripts": {
-    "dev": "ringhat start --params=\"tsc --build tsconfig.server.json && node dist/customServer/server.js\"",
+    "dev": "hat-cli start --params=\"tsc --build tsconfig.server.json && node dist/customServer/server.js\"",
     "postinstall": "next build && tsc --project tsconfig.server.json && node dist/cicd/postbuild.js",
     "build": "next build && node dist/cicd/postbuild.js",
-    "buildLocal": "ringhat start --params=\"next build && node dist/cicd/postbuild.js\"",
-    "startLocal": "ringhat start --params=\"cross-env NODE_ENV=production node dist/customServer/server.js\"",
+    "buildLocal": "hat-cli start --params=\"next build && node dist/cicd/postbuild.js\"",
+    "startLocal": "hat-cli start --params=\"cross-env NODE_ENV=production node dist/customServer/server.js\"",
     "lint": "next lint",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:fix": "npx eslint . --fix",
-    "dev2": "ringhat start --params=\"next dev -p 80\""
+    "dev2": "hat-cli start --params=\"next dev -p 80\""
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.329.0",
     "@aws-sdk/lib-storage": "^3.329.0",
-    "@ras-tech/node-scripts": "*",
     "@ringpublishing/graphql-api-client": "2.0.0",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
@@ -25,9 +24,9 @@
     "cross-env": "^7.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "hat-example-components": "https://github.com/ringpublishing/hat-example-components.git#v1.0.0",
-    "hat-ring-components": "https://github.com/ringpublishing/hat-components.git#v1.0.0",
-    "hat-server": "https://github.com/ringpublishing/hat-server.git#v1.0.0",
+    "hat-example-components": "https://github.com/ringpublishing/hat-example-components.git#1.0.3",
+    "hat-ring-components": "https://github.com/ringpublishing/hat-components.git#1.0.0",
+    "@ringpublishing/hat-server": "1.0.0",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
