--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@aws-sdk/client-s3": "^3.329.0",
     "@aws-sdk/lib-storage": "^3.329.0",
     "@ringpublishing/graphql-api-client": "2.0.0",
+    "@ringpublishing/hat-server": "1.0.0",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "cross-env": "^7.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "hat-example-components": "https://github.com/ringpublishing/hat-example-components.git#1.0.5",
+    "hat-example-components": "github:ringpublishing/hat-example-components#1.0.7",
     "hat-ring-components": "https://github.com/ringpublishing/hat-components.git#1.0.0",
-    "@ringpublishing/hat-server": "1.0.0",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
