--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "hat-boilerplate",
-  "version": "1.0.3",
-  "private": true,
-  "scripts": {
-    "dev": "hat-cli start --params=\"tsc --build tsconfig.server.json && node dist/customServer/server.js\"",
-    "postinstall": "next build && tsc --project tsconfig.server.json && node dist/cicd/postbuild.js",
-    "build": "next build && node dist/cicd/postbuild.js",
-    "buildLocal": "hat-cli start --params=\"next build && node dist/cicd/postbuild.js\"",
-    "startLocal": "hat-cli start --params=\"cross-env NODE_ENV=production node dist/customServer/server.js\"",
-    "lint": "next lint",
-    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx",
-    "lint:js:fix": "npm run lint:js -- --fix",
-    "lint:fix": "npx eslint . --fix",
-    "dev2": "hat-cli start --params=\"next dev -p 80\""
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.329.0",
-    "@aws-sdk/lib-storage": "^3.329.0",
-    "@ringpublishing/graphql-api-client": "2.0.0",
-    "@ringpublishing/hat-server": "1.0.0",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "cross-env": "^7.0.3",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "hat-example-components": "github:ringpublishing/hat-example-components#1.0.7",
-    "hat-ring-components": "https://github.com/ringpublishing/hat-components.git#1.0.0",
-    "lodash": "^4.17.21",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.57.1",
-    "ts-node": "^10.9.1",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "node-typescript": "^0.1.3"
-  }
+    "name": "hat-example",
+    "version": "0.0.1",
+    "hatCreateConfigurationForWebsiteManager": true,
+    "scripts": {
+        "dev": "dotenv -- hatcli start --params=\"astro dev --host\"",
+        "dstart": "astro dev",
+        "startPaas": "hatcli start --params=\"cde app\"",
+        "build": "astro check && astro build",
+        "localBuild": "dotenv -- hatcli start --params=\"astro check && astro build\"",
+        "preview": "dotenv -- hatcli start --params=\"astro preview --host\"",
+        "astro": "astro",
+        "lint:js": "eslint --ext .js,.jsx,.ts,.tsx",
+        "postinstall": "astro check && astro build && tsc --project tsconfig.server.json",
+        "postbuildLocal": "hatcli start --params=\"tsc --build tsconfig.server.json &&  node dist/cicd/postbuild.js\"",
+        "paaspostbuild": "node dist/cicd/postbuild.js"
+    },
+    "dependencies": {
+        "@astrojs/node": "^9.0.0",
+        "@astrojs/react": "^4.1.1",
+        "@astrojs/ts-plugin": "^1.10.4",
+        "@aws-sdk/client-s3": "^3.329.0",
+        "@aws-sdk/lib-storage": "^3.329.0",
+        "@ringpublishing/graphql-api-client": "^4.0.0",
+        "@types/react": "^18.2.38",
+        "@types/react-dom": "^18.2.17",
+        "astro": "^5.0.9",
+        "astro-seo": "^0.8.3",
+        "dayjs": "^1.11.11",
+        "dotenv-cli": "7.4.1",
+        "eslint": "8.29.0",
+        "hat-ring-components": "git+https://github.com/ringpublishing/hat-components#3.0.0",
+        "hat-server": "git+https://github.com/ringpublishing/hat-server.git#2.6.7",
+        "lodash": "^4.17.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "1.79.1",
+        "typescript": "^5.2.2"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/lodash": "^4.17.7"
+    }
 }
