--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "baseUrl": ".",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "strictNullChecks": false
-  },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "extends": "astro/tsconfigs/strict",
+    "compilerOptions": {
+        "strictNullChecks": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "react",
+        "strict": false,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "verbatimModuleSyntax": false,
+        "noImplicitAny": false,
+        "outDir": "dist",
+        "plugins": [
+            {
+                "name": "@astrojs/ts-plugin"
+            },
+        ],
+        "paths": {
+            "@common/*": ["./node_modules/hat-ring-components/src/components/common/*"],
+        }
+    }
 }
