Update dependencies and refactor middleware logic
Upgraded several dependencies in package.json, including major updates to hat-server and hat-ring-components. Refactored src/middleware.ts to use MiddlewareHelper_processRequest for streamlined middleware handling and improved cache reset logic. Added security.allowedDomains to astro.config.mjs, updated .gitignore with new entries, and introduced a new admin page at src/pages/hatadmin.astro.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.development
 
 # macOS-specific files
 .DS_Store
 
 /.idea
+package-lock.json
+build/config.gypi
