--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
         "paaspostbuild": "node dist/cicd/postbuild.js"
     },
     "dependencies": {
-        "@astrojs/node": "^9.0.3",
-        "@astrojs/react": "^4.1.1",
-        "@astrojs/ts-plugin": "^1.10.4",
+        "@astrojs/check": "0.9.4",
+        "@astrojs/node": "9.5.0",
+        "@astrojs/react": "4.4.0",
+        "@astrojs/ts-plugin": "1.10.5",
         "@aws-sdk/client-s3": "^3.329.0",
         "@aws-sdk/lib-storage": "^3.329.0",
         "@ringpublishing/graphql-api-client": "^4.0.0",
         "@types/react": "^18.2.38",
         "@types/react-dom": "^18.2.17",
-        "astro": "^5.12.3",
-        "astro-seo": "^0.8.3",
+        "astro": "5.14.5",
+        "astro-seo": "0.8.4",
         "dayjs": "^1.11.11",
         "dotenv-cli": "7.4.1",
         "eslint": "8.29.0",
-        "hat-ring-components": "git+https://github.com/ringpublishing/hat-components#3.4.0",
-        "hat-server": "git+https://github.com/ringpublishing/hat-server.git#2.7.0",
+        "hat-ring-components": "git+https://github.com/ringpublishing/hat-components#4.4.2",
+        "hat-server": "git+https://github.com/ringpublishing/hat-server.git#3.0.3",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
