add example redis env vars

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,14 @@ MEM_CACHE_FOR_CONFIG_MODE=request
 MEM_CACHE_FOR_CONFIG_TTL_MS=1000
 # Selects the cache implementation. Set to 0 for in-memory Node.js cache, or 1 for a Redis cache.
 USE_REDIS=0
+# Connection string or endpoint for the Redis Read-Write instance.
+REDIS_RW=
+# The ID of the Redis replication group, used for clustering or high availability setup.
+REDIS_REPLICATION_GROUP_ID=
+# The username for Redis authentication if Access Control Lists (ACLs) are enabled.
+REDIS_USERNAME=
+# The AWS region where the Redis cluster is hosted.
+REDIS_REGION=
 # Sets the `max-age` value for the `Cache-Control` HTTP response header, in seconds. Defaults to 60.
 RESPONSE_HEADER_CACHE_CONTROL_MAX_AGE=60
 # Defines the Time-To-Live (TTL) for responses from the site API, in seconds. Defaults to 60.
