--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ MEM_CACHE_FOR_CONFIG_MODE=request
 MEM_CACHE_FOR_CONFIG_TTL_MS=1000
 # Selects the cache implementation. Set to 0 for in-memory Node.js cache, or 1 for a Redis cache.
 USE_REDIS=0
-# Connection string or endpoint for the Redis Read-Write instance.
+# Connection endpoint(Host) for the Redis Read-Write instance. eg. 'master.XXXXXX.XXXXX.euc1.cache.amazonaws.com'
 REDIS_RW=
 # The ID of the Redis replication group, used for clustering or high availability setup.
 REDIS_REPLICATION_GROUP_ID=
